wr-138: * fix articles list spacing

--- a/frontend/src/pages/articles/styles.module.scss
+++ b/frontend/src/pages/articles/styles.module.scss
@@ -43,5 +43,6 @@
   flex-direction: column;
   gap: 15px;
   padding-top: 15px;
+  padding-bottom: 15px;
   border-top: 1px solid var(--gray);
 }
